// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`importRewriteLoader snapshots should match snapshot for JSX transformation 1`] = `
"import React from 'react';
import { useAsync } from "@cascadiacollections/fluentui-compat";
export const MyComponent = () => {
  const async = useAsync();
  return <div>
      <h1>Test</h1>
      <button onClick={() => async.flush()}>Flush</button>
    </div>;
};"
`;

exports[`importRewriteLoader snapshots should match snapshot for TypeScript with type annotations 1`] = `
"import { useAsync, useConst } from "@cascadiacollections/fluentui-compat";
const MyComponent: React.FC = () => {
  const async = useAsync();
  const value: number = useConst(() => 42);
  return null;
};"
`;

exports[`importRewriteLoader snapshots should match snapshot for aliased import 1`] = `"import { useAsync as myAsync } from "@cascadiacollections/fluentui-compat";"`;

exports[`importRewriteLoader snapshots should match snapshot for complex code with multiple imports 1`] = `
"import React from 'react';
import { useAsync, useConst } from "@cascadiacollections/fluentui-compat";
import { OtherThing } from '@fluentui/utilities';
import { Button } from '@material-ui/core';
function MyComponent() {
  const async = useAsync();
  const constant = useConst(() => ({
    value: 42
  }));
  return <Button onClick={() => console.log(async, constant, OtherThing)}>Click</Button>;
}
export default MyComponent;"
`;

exports[`importRewriteLoader snapshots should match snapshot for complex real-world component 1`] = `
"import React, { useState, useEffect, useCallback } from 'react';
import { useAsync, useConst } from "@cascadiacollections/fluentui-compat";
import { useBoolean } from '@fluentui/utilities';
import { Button, TextField } from '@fluentui/react-components';
interface Props {
  onSubmit: (data: string) => Promise<void>;
}
export const ComplexComponent: React.FC<Props> = ({
  onSubmit
}) => {
  const [value, setValue] = useState('');
  const async = useAsync();
  const [isLoading, {
    setTrue: startLoading,
    setFalse: stopLoading
  }] = useBoolean(false);
  const initialConfig = useConst(() => ({
    apiUrl: '/api/data'
  }));
  const handleSubmit = useCallback(async () => {
    startLoading();
    try {
      await onSubmit(value);
    } finally {
      stopLoading();
    }
  }, [value, onSubmit, startLoading, stopLoading]);
  useEffect(() => {
    return () => async.dispose();
  }, [async]);
  return <div>
      <TextField value={value} onChange={(_, data) => setValue(data.value)} />
      <Button onClick={handleSubmit} disabled={isLoading}>
        Submit
      </Button>
    </div>;
};"
`;

exports[`importRewriteLoader snapshots should match snapshot for custom mapping configuration 1`] = `
"import { CustomHook } from "@custom/compat";
import { OtherThing } from '@custom/lib';"
`;

exports[`importRewriteLoader snapshots should match snapshot for default import (no rewrite) 1`] = `"import FluentUI from '@fluentui/utilities';"`;

exports[`importRewriteLoader snapshots should match snapshot for mixed default and named imports 1`] = `
"import { useAsync } from "@cascadiacollections/fluentui-compat";
import Utilities, { OtherThing } from '@fluentui/utilities';"
`;

exports[`importRewriteLoader snapshots should match snapshot for mixed mapped and unmapped imports 1`] = `
"import { useAsync } from "@cascadiacollections/fluentui-compat";
import { UnmappedExport } from '@fluentui/utilities';"
`;

exports[`importRewriteLoader snapshots should match snapshot for multiple mapped imports 1`] = `"import { useAsync, useConst } from "@cascadiacollections/fluentui-compat";"`;

exports[`importRewriteLoader snapshots should match snapshot for multiple separate imports from same package 1`] = `
"import { useAsync } from "@cascadiacollections/fluentui-compat";
import { useConst } from "@cascadiacollections/fluentui-compat";
import { OtherThing } from '@fluentui/utilities';"
`;

exports[`importRewriteLoader snapshots should match snapshot for namespace import (no rewrite) 1`] = `"import * as FluentUI from '@fluentui/utilities';"`;

exports[`importRewriteLoader snapshots should match snapshot for side-effect only import 1`] = `"import '@fluentui/utilities';"`;

exports[`importRewriteLoader snapshots should match snapshot for simple mapped import 1`] = `"import { useAsync } from "@cascadiacollections/fluentui-compat";"`;

exports[`importRewriteLoader snapshots should match snapshot for unmapped import only 1`] = `"import { UnmappedExport } from '@fluentui/utilities';"`;

exports[`importRewriteLoader snapshots should match snapshot when no imports need rewriting 1`] = `
"import React from 'react';
import { Button } from '@material-ui/core';

const MyButton = () => <Button>Click me</Button>;

export default MyButton;"
`;
